v2.4 - icon size and z-index fixed

--- a/qa-styles.css
+++ b/qa-styles.css
@@ -1,6 +1,6 @@
 /*
-	Theme Version: 2.0
-  Theme Date: 2020-10-16
+	Theme Version: 2.4
+  Theme Date: 2020-11-07
   Theme Author: Momin Raza
   Theme Author URI: https://mominraza.github.io
 */
@@ -570,15 +570,16 @@ select {
 }
 
 .qa-favorite-image {
-  padding: 3px;
+  padding: 6px;
 }
 .qa-favorite-image::before {
   font-family: "Material Icons";
   color: var(--link);
   position: absolute;
-  margin-left: -6px;
-  margin-top: 2px;
+  margin-left: -7px;
+  /* margin-top: 2px; */
   content: "star_border";
+  font-size: 18px;
 }
 .qa-nav-sub-clear {
   height: 42px;
@@ -995,6 +996,7 @@ select {
   content: "star";
   display: inline-block;
   margin-right: 6px;
+  margin-left: -4px;
   vertical-align: bottom;
 }
 .qa-q-item-stats {
@@ -1023,7 +1025,22 @@ select {
   padding-left: 0;
   padding-right: 20px;
 }
-
+.qa-a-count-zero span {
+  color: var(--error);
+}
+.qa-a-count-selected span {
+  color: var(--selected);
+}
+.qa-a-count-selected::after {
+  font-family: "Material Icons";
+  content: "check_circle";
+  text-transform: none;
+  color: var(--selected);
+  position: absolute;
+  margin-left: 5px;
+  /* margin-top: 1.5px; */
+  font-size: 18px;
+}
 .qa-suggest-next {
   margin-bottom: 20px;
 }
@@ -1084,8 +1101,8 @@ select {
 }
 .theme-toggle {
   cursor: pointer;
-  font-size: 20px !important;
-  top: 4px !important;
+  /* font-size: 24px !important; */
+  top: 7px !important;
 }
 
 /* form */
@@ -1336,6 +1353,7 @@ select {
   position: absolute;
   margin-left: -20px;
   content: "star";
+  font-size: 18px;
 }
 
 .qa-browse-cat-list,
@@ -1407,9 +1425,9 @@ select {
   font-family: "Material Icons";
   position: absolute;
   left: 0;
-  top: 1px;
   margin-left: -22px;
   content: "star";
+  font-size: 18px;
 }
 /* tags page */
 .qa-top-tags-table tbody {
@@ -1496,6 +1514,7 @@ select {
   position: absolute;
   margin-left: -20px;
   content: "star";
+  font-size: 18px;
 }
 .qa-top-users-score {
   position: absolute;
@@ -1664,7 +1683,7 @@ select {
 .qa-vote-buttons input {
   /* border: 0; */
   position: absolute;
-  z-index: 4;
+  z-index: 1;
   opacity: 0;
   cursor: pointer;
   width: 60px;
@@ -1907,7 +1926,7 @@ select {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 3;
+  z-index: 1;
   cursor: pointer;
 }
 .qam-what-2-body {
